infrastructure/envoy-gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
    name: wac-hospital-gateway-class
spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
